--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#C2185B">
+    <meta name="theme-color" content="#CF9ABB">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The official website of AllThemDank. No rights reserved.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -38,7 +38,7 @@ limitations under the License.
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#00796B">
+    <meta name="msapplication-TileColor" content="#CF9ABB">
 
     <link rel="shortcut icon" href="images/favicon.ico">
 
