--- a/wan.html
+++ b/wan.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#5870A7">
+    <meta name="theme-color" content="#7088BF">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Die offizielle Website der Fahrschule Michels aus Goch/Pfalzdorf.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -38,7 +38,7 @@ limitations under the License.
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#5870A7">
+    <meta name="msapplication-TileColor" content="#7088BF">
 
     <link rel="shortcut icon" href="images/favicon_wan.ico">
 
