--- a/wan.html
+++ b/wan.html
@@ -134,6 +134,16 @@ limitations under the License.
                         <div class="mdl-card__supporting-text mdl-color-text--grey-300">
                             This app is not for commercial use!
                             <br>
+                            <h5>Preview</h5>
+                                <p></p>
+                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                
+                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <p></p>
                             <h5>Functions</h5>
                             <ul>
                             <li>fetches text data from the official WetterAmNiederrhein website</li>
