--- a/pasta.html
+++ b/pasta.html
@@ -167,9 +167,13 @@
                             <div class="mdl-card__supporting-text mdl-color-text--grey-300">
                                 <h5>Preview</h5>
                                 <p></p>
-                                <img src="images/AppScreen.png" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen2.png" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen3.png" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                
+                                <img src="images/AppScreen.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
                                 <p></p>
                                 <h5>Functions</h5>
                                 <ul>
