--- a/wan.html
+++ b/wan.html
@@ -136,13 +136,13 @@ limitations under the License.
                             <br>
                             <h5>Preview</h5>
                                 <p></p>
-                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
-                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--large-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--large-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
+                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--large-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
                                 
-                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
-                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--small-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN1.png" class="mdl-layout--small-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN2.png" class="mdl-layout--small-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
+                                <img src="images/AppScreen_WaN3.png" class="mdl-layout--small-screen-only" alt="WaN App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px">
                                 <p></p>
                             <h5>Functions</h5>
                             <ul>
