--- a/index.html
+++ b/index.html
@@ -133,10 +133,8 @@ limitations under the License.
                             </div>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone mdl-color-text--grey-300">
                                 <h4>Why only Android?</h4>
-                                <p>1. For iOS you need: A Mac computer, an iPhone or iPad for testing, a developer account that costs 100$ per year.</p>
-                                <p>2. Windows Phone or other: They are dead + Android is Open-Source!</p>
-                                <p>3. Android is definitely the future. Open-Source always wins, but the victory comes slow. Androids marketshare is the biggest world wide + Android makes more fun.</p>
-                                <p>4. Ai dew not hav teh monie 4 apel</p>
+                                <p>I like Android the most, it's open and fun. AOSP-near Android is the best!</p>
+                                <p>Also: I don't have an iPhone (for testing), I don't have a Mac or atleast a Hackintosh (for XCode).</p>
                             </div>
                         </div>
                         <div class="mdl-card__actions_index">
