--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@ limitations under the License.
                                 <h4>Why only Android?</h4>
                                 <p>I like Android the most, it's open and fun. AOSP-near Android is the best!</p>
                                 <p>Also: I don't have an iPhone (for testing), I don't have a Mac or atleast a Hackintosh (for XCode).</p>
+                                <p>Oh, and: ​<a target="_blank" href="https://www.youtube.com/watch?v=vnVuqfXohxc">be together. not the same.</a></p>
                             </div>
                         </div>
                         <div class="mdl-card__actions_index">
