--- a/dankpapes.html
+++ b/dankpapes.html
@@ -49,7 +49,7 @@ limitations under the License.
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-purple.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
     <link rel="stylesheet" href="styles_dankpapes.css">
     <link rel="stylesheet" type="text/css" href="dialog-polyfill.css" />
 
