--- a/pasta.html
+++ b/pasta.html
@@ -188,7 +188,7 @@
                                 </p>
                                 <br>
                                 <p></p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--black" id="downloadButton" href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5M3JZVnhRWF9lbGM">Download</a>
-                                <span class="mdl-tooltip mdl-tooltip--large" for="downloadButton">Download the newest version of Pasta</span>
+                                <span class="mdl-tooltip mdl-tooltip--large" for="downloadButton">Download the latest version</span>
                             </div>
                         </div>
                     </section>
