--- a/wan.html
+++ b/wan.html
@@ -165,6 +165,11 @@ limitations under the License.
                         <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-300">
                             <h3 class="mdl-cell mdl-cell--12-col">Changelog</h3>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+                                <h4>04.07.2017</h4>
+                                <p>Added an update system to the app: You get notified if an update is available</p>
+                                <p>Added 'Renesse' to the webcams (requested)</p>
+                            </div>
+                            <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                 <h4>10.04.2017</h4>
                                 <p>Fixed some small things + added an animation on launch</p>
                             </div>
