--- a/dankpapes.html
+++ b/dankpapes.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#D6CFCC">
+    <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Die offizielle Website der Fahrschule Michels aus Goch/Pfalzdorf.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -38,7 +38,7 @@ limitations under the License.
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
     <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
-    <meta name="msapplication-TileColor" content="#D6CFCC">
+    <meta name="msapplication-TileColor" content="#0C0D10">
 
     <link rel="shortcut icon" href="images/favicon_dankpapes.ico">
 
@@ -85,12 +85,12 @@ limitations under the License.
             </div>
         </dialog>
 
-        <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#FAF3F0">
+        <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#0C0D10">
 
             <div class="mdl-layout__header-row">
 
                 <!-- Title -->
-                <span class="title-span mdl-color-text--black">Dank Papes</span>
+                <span class="title-span mdl-color-text--grey-800">Dank Papes</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
             </div>
@@ -124,10 +124,13 @@ limitations under the License.
             </nav>
 
         </div>
+        
+        
 
         <main class="mdl-layout__content" style="background-color:#141517">
 
-            <div class="mdl-layout__tab-panel is-active" id="overview">
+            <div class="dankpapes-ribbon"></div>
+            <div class="ribbon-main mdl-layout__tab-panel is-active" id="overview">
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                     <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#1B1C1F">
                         <div class="mdl-card__title">
