--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@ limitations under the License.
                         </div>
                     </div>
                 </section>
-                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                <div class="index-ribbon"></div>
+                <section class="ribbon-main section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                     <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#1B1C1F">
                         <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
                             <h3 class="mdl-cell mdl-cell--12-col mdl-color-text--grey-300">About</h3>
