--- a/dankpapes.html
+++ b/dankpapes.html
@@ -49,7 +49,7 @@ limitations under the License.
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-pink.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-pink.min.css" />
     <link rel="stylesheet" href="styles_dankpapes.css">
     <link rel="stylesheet" type="text/css" href="dialog-polyfill.css" />
 
@@ -90,7 +90,7 @@ limitations under the License.
             <div class="mdl-layout__header-row">
 
                 <!-- Title -->
-                <span class="title-span mdl-color-text--grey-800">Dank Papes</span>
+                <span class="title-span mdl-color-text--white">Dank Papes</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
             </div>
