--- a/pasta.html
+++ b/pasta.html
@@ -104,7 +104,7 @@
         </style>
 
         <div class="demo-layout-waterfall mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer  mdl-layout--no-desktop-drawer-button">
-            <header class="mdl-layout__header mdl-layout__header--waterfall" id="header" style="background-color:#B184F1">
+            <header class="mdl-layout__header mdl-shadow--4dp mdl-layout__header--waterfall" id="header" style="background-color:#B184F1">
                 <!-- Top row, always visible -->
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
@@ -156,7 +156,7 @@
             </div>
             <main class="mdl-layout__content" style="background-color:#141517">
                 <div class="mdl-layout__tab-panel is-active" id="overview">
-                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                         <div class="pasta-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--grey-300" style="background-color:#1B1C1F">
                             <div class="mdl-card__title">
                                 <img src="images/icon.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
@@ -192,7 +192,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                         <div class="news-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--white" style="background-color:#1B1C1F">
                             <div class="mdl-card__title">
                                 <h2 class="mdl-card__title-text">Changelog</h2>
