--- a/dankpapes.html
+++ b/dankpapes.html
@@ -22,7 +22,7 @@ limitations under the License.
     <meta charset="utf-8">
     <meta name="theme-color" content="#000000">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Die offizielle Website der Fahrschule Michels aus Goch/Pfalzdorf.">
+    <meta name="description" content="DankPapes: Yet another wallpaper app...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Dank Papes</title>
 
@@ -68,22 +68,6 @@ limitations under the License.
 <body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#141517">
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
-
-
-        <dialog class="mdl-dialog mdl-color--grey-200 mdl-color-text--white" id="facebook-dialog">
-
-            <div class="mdl-dialog__title">
-                <h4>Worin soll Facebook gestartet werden?</h4>
-            </div>
-            <div class="mdl-dialog__content">
-                <button id="facebook-notatall" type="button" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white notatall">Nicht starten</button>
-            </div>
-            <div class="mdl-dialog__actions">
-                <button id="facebook-yes" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-shadow--8dp yes">App</button>
-                <button id="facebook-no" type="button" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-shadow--8dp no">Website</button>
-
-            </div>
-        </dialog>
 
         <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#0C0D10">
 
