--- a/pasta.html
+++ b/pasta.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#9669D6">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+    <meta name="description" content="Pasta: A simple copypasta app.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <title>Pasta</title>
 
