--- a/dankpapes.html
+++ b/dankpapes.html
@@ -49,7 +49,7 @@ limitations under the License.
 
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,400i,700,700i|Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.teal-pink.min.css" />
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-pink.min.css" />
     <link rel="stylesheet" href="styles_dankpapes.css">
     <link rel="stylesheet" type="text/css" href="dialog-polyfill.css" />
 
@@ -69,12 +69,12 @@ limitations under the License.
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
-        <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#0C0D10">
+        <header class="mdl-layout__header mdl-layout__header--transparent mdl-layout__header--waterfall mdl-shadow--4dp">
 
             <div class="mdl-layout__header-row">
 
                 <!-- Title -->
-                <span class="title-span mdl-color-text--white">Dank Papes</span>
+                <span class="title-span">Dank Papes</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
             </div>
