--- a/dankpapes.html
+++ b/dankpapes.html
@@ -65,7 +65,7 @@ limitations under the License.
 
 </head>
 
-<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#141517">
+<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#F5F5F5">
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
@@ -111,17 +111,17 @@ limitations under the License.
         
         
 
-        <main class="mdl-layout__content" style="background-color:#141517">
+        <main class="mdl-layout__content" style="background-color:#F5F5F5">
 
             <div class="dankpapes-ribbon"></div>
             <div class="ribbon-main mdl-layout__tab-panel is-active" id="overview">
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#1B1C1F">
+                    <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#FAFAFA">
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text mdl-color-text--grey-100">Beautiful hand selected images</h2>
                         </div>
-                        <div class="mdl-card__supporting-text mdl-color-text--grey-300">
-                            A simple wallpaper app, but with some of my favorite backgrounds.
+                        <div class="mdl-card__supporting-text mdl-color-text--grey-900">
+                            Yet another simple wallpaper app, but with some of my favorite backgrounds.
                             <br>
                             <h5>Functions</h5>
                             <ul>
@@ -136,14 +136,14 @@ limitations under the License.
                                     <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> Only for Android!</a>
                             </p>
                             <br>
-                            <p></p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--black" id="downloadButton" href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5MWlZT1FsT1Q3aTA">Download</a>
+                            <p></p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--grey-900" id="downloadButton" href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5MWlZT1FsT1Q3aTA">Download</a>
                             <span class="mdl-tooltip mdl-tooltip--large" for="downloadButton">Download the latest version</span>
                         </div>
                     </div>
                 </section>
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#1B1C1F">
-                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-300">
+                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
+                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-900">
                             <h3 class="mdl-cell mdl-cell--12-col">Changelog</h3>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                 <h4>01.05.2017</h4>
