--- a/dankpapes.html
+++ b/dankpapes.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#EEEEEE">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="DankPapes: Yet another wallpaper app...">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
