--- a/contact.html
+++ b/contact.html
@@ -64,11 +64,11 @@ limitations under the License.
 
 </head>
 
-<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#141517">
+<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#F5F5F5">
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
-        <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#DFD19F">
+        <header class="mdl-layout__header mdl-shadow--2dp" style="background-color:#DFD19F">
 
             <div class="mdl-layout__header-row">
 
@@ -78,7 +78,7 @@ limitations under the License.
                 <div class="mdl-layout-spacer"></div>
             </div>
         </header>
-        <div class="mdl-layout__drawer" style="background-color:#1B1C1F">
+        <div class="mdl-layout__drawer" style="background-color:#2D2E31">
             <span class="mdl-layout-title-background">
                 <img class="android-logo-image" src="images/meirlicon.png">
         </span>
@@ -91,7 +91,7 @@ limitations under the License.
 
             </nav>
 
-            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#0C0D10">Apps</span>
+            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#1B1C1F">Apps</span>
 
             <div class="android-drawer-separator"></div>
 
@@ -107,13 +107,13 @@ limitations under the License.
 
         </div>
 
-        <main class="mdl-layout__content" style="background-color:#141517">
+        <main class="mdl-layout__content" style="background-color:#F5F5F5">
 
             <div class="mdl-layout__tab-panel is-active" id="overview">
                 
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#1B1C1F">
-                        <div class="mdl-card__supporting-text mdl-color-text--grey-300">
+                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
+                        <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             <h4>E-Mail</h4>
                             <p>Feel free to write me a message. <IMG SRC="https://lh3.googleusercontent.com/-VY99ira_vKnfiU3rg5XyGZ75JuKCp9zty9sDHE4RPuzwyX8zldOrCx3166JKCHOnVyw1hE828s1TVD1Fz9LyNKxtOq5U_9YDq-rbcrrUujuUfv25aF4X1Gb7s9-FPrjCLXQwQ4rewSKhmyH0ADT_NFrRZiktJ9pF1kQaXdjbBoUunKdCOJJ63w0M_W-8j2Q1EyG87o5Wly1kSsXjUV-yHqfKhfu4FJzdXa_-2NlmGpkr12W1LZvSI0TVGKospZWjXSkfnXPoTnyG59nTzEEgQrkFN9IaraSThuRs5giBZttaCSkwzkA3um5ZHBI5ifDyCyKj-sYXZpV1dThc9l7rnLZb--CV8-OkT9h2-srPrs8MI25R39fZweGibGMud2jlviuF8A7p-IGPTN2LTaruPgQfUrL9eWFqHEwDmYOJ32ySEi33BIof7b6SoLgEWFMnQtBOtuNFiIl2MfXqX-y1K-fcL4_L1Xj3ILQ32FyUpMK3gzDX3cWSVeFYBL9_Rfs8L19BFrtp2Wap0aooPgDaysR75SYMw921QGi-ov5QPJBNHR7iO08EmIiyDMzNxoSd0yLzgqBBURPQ0NaeU6g6Qn__UqkO1gHtMzOg5aBXuHg3hb492QG=s33-no" ALT="" WIDTH=24 HEIGHT=24></p>
                             
@@ -148,8 +148,8 @@ limitations under the License.
                 <span class="mdl-tooltip mdl-tooltip--large" for="kontakt-span2">Fragen? Wir stehen immer gerne zur Verfügung</span>
 
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#1B1C1F">
-                        <div class="mdl-card__supporting-text mdl-color-text--grey-300">
+                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
+                        <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             <h4>Important</h4>
                             <p>I will answer your message as fast as possible, but keep in mind that I can't be available all the time.</p>
                         </div>
