--- a/dankpapes.html
+++ b/dankpapes.html
@@ -80,7 +80,7 @@ limitations under the License.
             </div>
         </header>
         
-        <div class="mdl-layout__drawer" style="background-color:#1B1C1F">
+        <div class="mdl-layout__drawer" style="background-color:#2D2E31">
             <span class="mdl-layout-title-background">
                 <img class="android-logo-image" src="images/ic_dankpapes.png">
         </span>
@@ -93,7 +93,7 @@ limitations under the License.
 
             </nav>
 
-            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#0C0D10">Apps</span>
+            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#1B1C1F">Apps</span>
 
             <div class="android-drawer-separator"></div>
 
@@ -120,7 +120,7 @@ limitations under the License.
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text mdl-color-text--grey-100">Beautiful hand selected images</h2>
                         </div>
-                        <div class="mdl-card__supporting-text mdl-color-text--grey-900">
+                        <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             Yet another simple wallpaper app, but with some of my favorite backgrounds.
                             <br>
                             <h5>Functions</h5>
@@ -143,7 +143,7 @@ limitations under the License.
                 </section>
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                     <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
-                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-900">
+                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-800">
                             <h3 class="mdl-cell mdl-cell--12-col">Changelog</h3>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                 <h4>01.05.2017</h4>
