--- a/wan.html
+++ b/wan.html
@@ -64,11 +64,11 @@ limitations under the License.
 
 </head>
 
-<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#141517">
+<body oncontextmenu="return false;" class="mdl-demo mdl-color-text--grey-700" style="background-color:#F5F5F5">
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
-        <header class="mdl-layout__header mdl-shadow--4dp" style="background-color:#88A0D7">
+        <header class="mdl-layout__header mdl-shadow--2dp" style="background-color:#88A0D7">
 
             <div class="mdl-layout__header-row">
 
@@ -78,7 +78,7 @@ limitations under the License.
                 <div class="mdl-layout-spacer"></div>
             </div>
         </header>
-        <div class="mdl-layout__drawer" style="background-color:#1B1C1F">
+        <div class="mdl-layout__drawer" style="background-color:#2D2E31">
             <span class="mdl-layout-title-background">
                 <img class="android-logo-image" src="images/ic_wan.png">
         </span>
@@ -91,7 +91,7 @@ limitations under the License.
 
             </nav>
 
-            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#0C0D10">Apps</span>
+            <span class="mdl-layout-title mdl-color-text--white" style="background-color:#1B1C1F">Apps</span>
 
             <div class="android-drawer-separator"></div>
 
@@ -107,15 +107,15 @@ limitations under the License.
 
         </div>
 
-        <main class="mdl-layout__content" style="background-color:#141517">
+        <main class="mdl-layout__content" style="background-color:#F5F5F5">
 
             <div class="mdl-layout__tab-panel is-active" id="overview">
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#1B1C1F">
+                    <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#FAFAFA">
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text mdl-color-text--grey-100">Wetter am Niederrhein</h2>
                         </div>
-                        <div class="mdl-card__supporting-text mdl-color-text--grey-300">
+                        <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             This app is not for commercial use!
                             <br>
                             <h5>Preview</h5>
@@ -145,8 +145,8 @@ limitations under the License.
                     </div>
                 </section>
                 <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#1B1C1F">
-                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-300">
+                    <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
+                        <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing mdl-color-text--grey-800">
                             <h3 class="mdl-cell mdl-cell--12-col">Changelog</h3>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone">
                                 <h4>04.07.2017</h4>
