--- a/pasta.html
+++ b/pasta.html
@@ -93,7 +93,7 @@
     </style>
 </head>
 
-<body class="mdl-demo mdl-color-text--grey-700 mdl-base" oncontextmenu="return false" style="background-color:#141517">
+<body class="mdl-demo mdl-color-text--grey-700 mdl-base" oncontextmenu="return false" style="background-color:#F5F5F5">
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
         <!-- Uses a header that contracts as the page scrolls down. -->
@@ -105,7 +105,7 @@
         </style>
 
         <div class="demo-layout-waterfall mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer  mdl-layout--no-desktop-drawer-button">
-            <header class="mdl-layout__header mdl-shadow--4dp mdl-layout__header--waterfall" id="header" style="background-color:#B184F1">
+            <header class="mdl-layout__header mdl-shadow--2dp mdl-layout__header--waterfall" id="header" style="background-color:#B184F1">
                 <!-- Top row, always visible -->
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
@@ -127,7 +127,7 @@
                     </nav>
                 </div>
             </header>
-            <div class="mdl-layout__drawer" style="background-color:#1B1C1F">
+            <div class="mdl-layout__drawer" style="background-color:#2D2E31">
                 <span class="mdl-layout-title-background">
                 <img class="android-logo-image" src="images/ic_pasta.png">
         </span>
@@ -140,7 +140,7 @@
 
                 </nav>
 
-                <span class="mdl-layout-title mdl-color-text--white" style="background-color:#0C0D10">Apps</span>
+                <span class="mdl-layout-title mdl-color-text--white" style="background-color:#1B1C1F">Apps</span>
 
                 <div class="android-drawer-separator"></div>
 
@@ -155,17 +155,17 @@
                 </nav>
 
             </div>
-            <main class="mdl-layout__content" style="background-color:#141517">
+            <main class="mdl-layout__content" style="background-color:#F5F5F5">
                 <div class="mdl-layout__tab-panel is-active" id="overview">
                     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                        <div class="pasta-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--grey-300" style="background-color:#1B1C1F">
+                        <div class="pasta-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--grey-800" style="background-color:#FAFAFA">
                             <div class="mdl-card__title">
                                 <img src="images/icon.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
                                 <h4>Pasta
                                     <p>The App is almost finished, a Beta is already available: ver. 0.9.2</p>
                                 </h4>
                             </div>
-                            <div class="mdl-card__supporting-text mdl-color-text--grey-300">
+                            <div class="mdl-card__supporting-text mdl-color-text--grey-900">
                                 <h5>Preview</h5>
                                 <p></p>
                                 <img src="images/AppScreen.png" class="mdl-layout--large-screen-only" alt="Pasta App" style="width: 100%; height: 100%;;max-width: 400px;max-height: 400px; margin-right:-120px; margin-left:-48px;">
@@ -194,11 +194,11 @@
                         </div>
                     </section>
                     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
-                        <div class="news-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--white" style="background-color:#1B1C1F">
+                        <div class="news-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--white" style="background-color:#FAFAFA">
                             <div class="mdl-card__title">
                                 <h2 class="mdl-card__title-text">Changelog</h2>
                             </div>
-                            <div class="mdl-card__supporting-text mdl-color-text--grey-300">
+                            <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                                 <h4>10.05.2017</h4>
                                 <ul>
                                     <li>New RecyclerView that loads the pastas, faster loading speeds</li>
