--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#CF9ABB">
+    <meta name="theme-color" content="#EA9B9E">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="The official website of AllThemDank. No rights reserved.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
