--- a/pasta.html
+++ b/pasta.html
@@ -184,11 +184,12 @@
                                     <li>Unicode Emoticons (not available in newest ver.)</li>
                                 </ul>
                                 <p>
-                                    <a>
-                                        <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> Only for Android!</a>
+                                    <p style="color:#FBC02D;">
+                                        <IMG SRC="https://lh3.googleusercontent.com/skEfl6Y3csFm3wV9fbtcOz4EFa3ljTiM_7VZsl18WmI0kBZNsBZdaTQ2CJRKEf-g4wUM4lAGYw=s328-no" class="drawer-icon-margin" ALT="" WIDTH=24 HEIGHT=24> Only for Android!</p>
                                 </p>
                                 <br>
                                 <p></p><a class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--black" id="downloadButton" href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5M3JZVnhRWF9lbGM">Download</a>
+                                <p></p>
                                 <span class="mdl-tooltip mdl-tooltip--large" for="downloadButton">Download the latest version</span>
                             </div>
                         </div>
