--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@ limitations under the License.
                                 </div>
                                 
                                     <p></p>
-                                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Senden">
+                                <input class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" type="submit" value="Submit message">
                                     <p></p>
                                     
                             </form>
