--- a/dankpapes.html
+++ b/dankpapes.html
@@ -178,6 +178,7 @@ limitations under the License.
             </footer>
         </main>
     </div>
+    <a href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5MWlZT1FsT1Q3aTA" id="view-source" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"><i class="material-icons">file_download</i></a>
     <script src="dialog-polyfill.js"></script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="script.js"></script>
