--- a/wan.html
+++ b/wan.html
@@ -20,7 +20,7 @@ limitations under the License.
 <head>
 
     <meta charset="utf-8">
-    <meta name="theme-color" content="#7088BF">
+    <meta name="theme-color" content="#ACA2FF">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="WaN: A simple weather app.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
@@ -68,7 +68,7 @@ limitations under the License.
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
-        <header class="mdl-layout__header mdl-shadow--2dp" style="background-color:#88A0D7">
+        <header class="mdl-layout__header mdl-layout__header--transparent mdl-layout__header--waterfall mdl-shadow--4dp">
 
             <div class="mdl-layout__header-row">
 
@@ -108,9 +108,11 @@ limitations under the License.
         </div>
 
         <main class="mdl-layout__content" style="background-color:#F5F5F5">
+            
+            <div class="wan-ribbon"></div>
 
             <div class="mdl-layout__tab-panel is-active" id="overview">
-                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                <section class="ribbon-main section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                     <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#FAFAFA">
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text mdl-color-text--grey-100">Wetter am Niederrhein</h2>
@@ -186,6 +188,7 @@ limitations under the License.
             </footer>
         </main>
     </div>
+    <a href="https://drive.google.com/uc?export=download&id=0B0o36-UOMOH5RkRYYTNDOWpOeFU" id="view-source" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored"><i class="material-icons">file_download</i></a>
     <script src="dialog-polyfill.js"></script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="script.js"></script>
