--- a/dankpapes.html
+++ b/dankpapes.html
@@ -182,6 +182,7 @@ limitations under the License.
     <script src="dialog-polyfill.js"></script>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="script.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="mdl-fab-scroll.js"></script>
 </body>
 
