--- a/wan.html
+++ b/wan.html
@@ -115,7 +115,7 @@ limitations under the License.
                 <section class="ribbon-main section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
                     <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#FAFAFA">
                         <div class="mdl-card__title">
-                            <h2 class="mdl-card__title-text mdl-color-text--grey-100">Wetter am Niederrhein</h2>
+                            <h2 class="mdl-card__title-text mdl-color-text--grey-100">Human weather reports</h2>
                         </div>
                         <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             This app is not for commercial use!
@@ -132,7 +132,7 @@ limitations under the License.
                                 <p></p>
                             <h5>Functions</h5>
                             <ul>
-                            <li>fetches text data from the official WetterAmNiederrhein website</li>
+                            <li>fetches text data from the official <a target="_blank" href="http://www.wetter-niederrhein.de/">WetterAmNiederrhein website</a></li>
                             <li><strong>Different Themes:</strong> light, dark, amoled</li>
                             <li>Webcams from some cities included</li>
                             </ul>
