--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ limitations under the License.
 
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer mdl-layout--no-desktop-drawer-button">
 
-        <header class="mdl-layout__header mdl-shadow--2dp" style="background-color:#FFB0B3">
+        <header class="mdl-layout__header mdl-layout__header--transparent mdl-layout__header--waterfall mdl-shadow--4dp">
 
             <div class="mdl-layout__header-row">
                 <!-- Title -->
@@ -107,7 +107,7 @@ limitations under the License.
         <main class="mdl-layout__content" style="background-color:#F5F5F5">
 
              <div class="mdl-layout__tab-panel is-active" id="overview">
-                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                     <div class="header-card-wide mdl-card mdl-cell mdl-cell--12-col-desktop mdl-cell--8-col-tablet mdl-cell--4-col-phone" style="background-color:#FAFAFA">
                         <div class="mdl-card__title">
                             <h2 class="mdl-card__title-text mdl-color-text--grey-900">Android Apps - Freetime Projects</h2>
@@ -122,12 +122,10 @@ limitations under the License.
                             <p><strong>Pasta:</strong> A copypasta app with a huge archive (still very incomplete).</p>
                             <p></p>
                         </div>
-                        <div class="mdl-card__actions_index">
-                        </div>
                     </div>
                 </section>
                 <div class="index-ribbon"></div>
-                <section class="ribbon-main section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                <section class="ribbon-main section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                     <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
                         <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
                             <h3 class="mdl-cell mdl-cell--12-col mdl-color-text--grey-900">About</h3>
@@ -148,7 +146,7 @@ limitations under the License.
                     </div>
                 </section>
 
-                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                     <div class="mdl-card mdl-cell mdl-cell--12-col" style="background-color:#FAFAFA">
                         <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                             <h4>What tools do I use?!</h4>
