--- a/pasta.html
+++ b/pasta.html
@@ -105,7 +105,7 @@
         </style>
 
         <div class="demo-layout-waterfall mdl-layout mdl-js-layout mdl-layout--fixed-header mdl-layout--fixed-drawer  mdl-layout--no-desktop-drawer-button">
-            <header class="mdl-layout__header mdl-shadow--2dp mdl-layout__header--waterfall" id="header" style="background-color:#B184F1">
+            <header class="mdl-layout__header mdl-layout__header--transparent mdl-layout__header--waterfall mdl-shadow--4dp" id="header">
                 <!-- Top row, always visible -->
                 <div class="mdl-layout__header-row">
                     <!-- Title -->
@@ -122,8 +122,8 @@
                     <nav class="mdl-navigation mdl-js-ripple-effect">
                         <a class="mdl-navigation__link" target="_blank" id="emojipasta" href="https://www.reddit.com/r/emojipasta/">/r/emojipasta</a>
                         <span class="mdl-tooltip mdl-tooltip--large" for="emojipasta">Find new pastas</span>
-                        <a class="mdl-navigation__link" target="_blank" id="github" href="https://github.com/allthemdank/">GitHub</a>
-                        <span class="mdl-tooltip mdl-tooltip--large" for="github">Take a look at the apps code!</span>
+                        <a class="mdl-navigation__link" target="_blank" id="github" href="https://github.com/AllThemDank/allthemdank.github.io/tree/master/pastadata">GitHub</a>
+                        <span class="mdl-tooltip mdl-tooltip--large" for="github">Take a look at the apps database!</span>
                     </nav>
                 </div>
             </header>
@@ -157,7 +157,7 @@
             </div>
             <main class="mdl-layout__content" style="background-color:#F5F5F5">
                 <div class="mdl-layout__tab-panel is-active" id="overview">
-                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                         <div class="pasta-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--grey-800" style="background-color:#FAFAFA">
                             <div class="mdl-card__title">
                                 <img src="images/icon.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
@@ -194,7 +194,7 @@
                             </div>
                         </div>
                     </section>
-                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--8dp">
+                    <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                         <div class="news-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--white" style="background-color:#FAFAFA">
                             <div class="mdl-card__title">
                                 <h2 class="mdl-card__title-text">Changelog</h2>
