--- a/index.html
+++ b/index.html
@@ -137,7 +137,12 @@ limitations under the License.
                                 <h4>Why only Android?</h4>
                                 <p>I like Android the most, it's open and fun. AOSP-near Android is the best!</p>
                                 <p>At this point in time I don't like Apples direction as a company and I am not willing to support it in any way.</p>
+                                <p>"Inviting the new kid to your lunch table...opening yourself up to new ideas…having the courage to add your thing to the world. It’s “moments of And” like these that move everything forward. </p>
+                                <p>A few years ago, we thought that phones and tablets and watches (and stuff that hasn’t even been invented yet) would be way more interesting if everyone was invited to imagine, invent, make, or buy whatever they wanted. So we created Android, and put it out there for everyone.</p>
+                                <p>Since then, all kinds of people, companies big and small, folks on Kickstarter, kids in schools, and mad-smart developers have been innovating faster, together, than any one company ever could. And the best part is...every time someone new joins in, things get more interesting, more unexpected, and more wonderful for all of us."</p>
+
                                 <p>​<a target="_blank" href="https://www.youtube.com/watch?v=AD-oCSoI9OQ">Be together. Not the same.</a></p>
+
                             </div>
                         </div>
                         <div class="mdl-card__actions_index">
