--- a/pasta.html
+++ b/pasta.html
@@ -160,7 +160,7 @@
                     <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--4dp">
                         <div class="pasta-card-wide mdl-card mdl-cell mdl-cell--12-col mdl-color-text--grey-800" style="background-color:#FAFAFA">
                             <div class="mdl-card__title">
-                                <img src="images/icon.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
+                                <img src="images/ic_pasta.png" alt="Pasta App" style="width:auto;height:auto;max-width: 200px;max-height: 200px;">
                                 <h4>Pasta
                                     <p>The App is almost finished, a Beta is already available: ver. 0.9.2</p>
                                 </h4>
