--- a/pasta.html
+++ b/pasta.html
@@ -182,6 +182,7 @@
                                     <li>Add own pastas or save your favorites</li>
                                     <li>Export and import pastas (disabled in newest ver.)</li>
                                     <li>Unicode Emoticons (not available in newest ver.)</li>
+                                    <li>The download version is deprecated. The app was almost fully rebuild with an online archive and much more. The release is scheduled to October 2017.</li>
                                 </ul>
                                 <p>
                                     <p style="color:#FBC02D;">
@@ -200,6 +201,11 @@
                                 <h2 class="mdl-card__title-text">Changelog</h2>
                             </div>
                             <div class="mdl-card__supporting-text mdl-color-text--grey-800">
+                              <h4>29.08.2017</h4>
+                              <ul>
+                                  <li>New app icon for the new app version: 1.0</li>
+                                  <li>Release planned for October 2017</li>
+                              </ul>
                                 <h4>10.05.2017</h4>
                                 <ul>
                                     <li>New RecyclerView that loads the pastas, faster loading speeds</li>
