--- a/pasta.html
+++ b/pasta.html
@@ -182,7 +182,7 @@
                                     <li>Add own pastas or save your favorites</li>
                                     <li>Export and import pastas (disabled in newest ver.)</li>
                                     <li>Unicode Emoticons (not available in newest ver.)</li>
-                                    <li>The download version is deprecated. The app was almost fully rebuild with an online archive and much more. The release is scheduled to October 2017.</li>
+                                    <li>The download version is deprecated. The app was almost fully rebuild with an online archive and much more, it'll be released soon™.</li>
                                 </ul>
                                 <p>
                                     <p style="color:#FBC02D;">
@@ -203,8 +203,7 @@
                             <div class="mdl-card__supporting-text mdl-color-text--grey-800">
                               <h4>29.08.2017</h4>
                               <ul>
-                                  <li>New app icon for the new app version: 1.0</li>
-                                  <li>Release planned for October 2017</li>
+                                  <li>New app icon for version 1.0</li>
                               </ul>
                                 <h4>10.05.2017</h4>
                                 <ul>
