--- a/pasta.html
+++ b/pasta.html
@@ -129,7 +129,7 @@
             </header>
             <div class="mdl-layout__drawer" style="background-color:#2D2E31">
                 <span class="mdl-layout-title-background">
-                <img class="android-logo-image" src="images/ic_pasta.png">
+                <img class="android-logo-image" src="images/final_sweet.png">
         </span>
 
                 <nav class="mdl-navigation">
