--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ limitations under the License.
                                 <p>A few years ago, we thought that phones and tablets and watches (and stuff that hasn’t even been invented yet) would be way more interesting if everyone was invited to imagine, invent, make, or buy whatever they wanted. So we created Android, and put it out there for everyone.</p>
                                 <p>Since then, all kinds of people, companies big and small, folks on Kickstarter, kids in schools, and mad-smart developers have been innovating faster, together, than any one company ever could. And the best part is...every time someone new joins in, things get more interesting, more unexpected, and more wonderful for all of us."</p>
 
-                                <p>​<a target="_blank" href="https://www.youtube.com/watch?v=AD-oCSoI9OQ">Be together. Not the same.</a></p>
+                                <p>​<a target="_blank" href="https://www.youtube.com/watch?v=vnVuqfXohxc">Be together. Not the same.</a></p>
 
                             </div>
                         </div>
