--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@ limitations under the License.
                             <h3 class="mdl-cell mdl-cell--12-col mdl-color-text--grey-900">About</h3>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone mdl-color-text--grey-800">
                                 <h4>MeIRL</h4>
-                                <p>Human, 20, German, Junior Android Software Developer, Junior HTML and Android Designer</p>
+                                <p>A real human bean, 20, German, Junior Android Software Developer, Junior HTML and Android Designer</p>
                             </div>
                             <div class="section__text mdl-cell mdl-cell--10-col-desktop mdl-cell--6-col-tablet mdl-cell--3-col-phone mdl-color-text--grey-800">
                                 <h4>Why only Android?</h4>
